force-app/main/default/objects/Parceiro__c/Parceiro__c.object-meta.xml
<CustomObject>
    <label>Parceiro</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Parceiros</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>