force-app/main/default/objects/Parceiro__c/fields/CapaPromocional__c.field-meta.xml
<CustomField>
    <fullName>CapaPromocional__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Capa Promocional</label>
    <referenceTo>ProposalCover__c</referenceTo>
    <relationshipLabel>Parceiros (Capa Promocional)</relationshipLabel>
    <relationshipName>Parceiros1</relationshipName>
    <type>Lookup</type>
</CustomField>