force-app/main/default/objects/Parceiro__c/fields/CapaProposta__c.field-meta.xml
<CustomField>
    <fullName>CapaProposta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Capa de Proposta</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ProposalCover__c.IsActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ProposalCover__c</referenceTo>
    <relationshipLabel>Parceiros</relationshipLabel>
    <relationshipName>Parceiros</relationshipName>
    <type>Lookup</type>
</CustomField>