force-app/main/default/objects/Parceiro__c/fields/OwnerOpportunity__c.field-meta.xml
<CustomField>
    <fullName>OwnerOpportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proprietario da Oportunidade</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Parceiros</relationshipName>
    <type>Lookup</type>
</CustomField>