force-app/main/default/objects/Parceiro__c/fields/Produto__c.field-meta.xml
<CustomField>
    <fullName>Produto__c</fullName>
    <label>Produto</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ezee Livre</fullName>
            </value>
            <value>
                <fullName>Ezee Connect</fullName>
            </value>
            <value>
                <fullName>Ezee Solar</fullName>
            </value>
            <value>
                <fullName>Solar</fullName>
            </value>
            <value>
                <fullName>Produtos</fullName>
            </value>
            <value>
                <fullName>Serviços</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>